<resources>
    <!-- COMMON -->
    <string name="app_name">PushAlerts</string>

    <!-- FRAGMENT TASK -->
    <string name="tiTasksOpen">Open</string>
    <string name="tiTasksClosed">Closed</string>

    <!-- FRAGMENT TASK DETAILS -->
    <string name="btnAssignTask">assign me</string>
    <string name="btnRejectTask">reject</string>
    <string name="btnFinishTask">done</string>
    <string name="ivTaskSourceIcon">task source name icon</string>
    <string name="ivTaskDescriptionIcon">task description name icon</string>
    <string name="ivTaskCreatedIcon">task created timestamp icon</string>
    <string name="ivTaskAssignedIcon">task assigned timestamp icon</string>
    <string name="ivTaskClosedIcon">task closed timestamp icon</string>
    <string name="tvTaskUserTitle">Status</string>
    <string name="tvTaskPayloadTitle">Additional Information</string>
    <string name="tvTaskHistoryTitle">History</string>
    <string name="tvTaskStatus_Created">Created</string>
    <string name="tvTaskStatus_Assigned">Assigned to: </string>
    <string name="tvTaskStatus_Rejected">Rejected by: </string>
    <string name="tvTaskStatus_Done">Done by: </string>

    <!-- FRAGMENT MAIN -->
    <string name="errorTaskDetailsMissingArguments">Error while opening task details.</string>
    <string name="ivCompanyLogo">The company logo</string>
    <string name="tilPasswordHint">Password</string>
    <string name="tilEmailHint">Email Address</string>
    <string name="btnLogin">login</string>
    <string name="ivStateIcon">Icon to indicate if finished or rejected</string>
    <string name="ivTaskSource">Icon for task source</string>
    <string name="ivDescriptionIcon">Icon for task description</string>
    <string name="chipFilterDone">Done</string>
    <string name="chipFilterRejected">Rejected</string>
    <string name="chipFilterMine">Mine</string>
    <string name="chipFilterUnassigned">Unassigned</string>

    <!-- FRAGMENT ABOUT -->
    <string name="title">Push Alerts</string>
    <string name="tvAuthor">Silvan Wenk</string>
    <string name="tvAuthorLabel">Author</string>
    <string name="tvDescription">Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum</string>
    <string name="tvLicenseLabel">Licenses</string>
</resources>