<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mcvTaskClosed"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:clickable="true"
    app:cardCornerRadius="0dp"
    app:cardElevation="0dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:padding="@dimen/spacing_cards">

        <TextView
            android:id="@+id/tvTaskName"
            style="@style/Widget.PushAlerts.Body1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="My Urgent Task" />

        <ImageView
            android:id="@+id/ivStateIcon"
            android:layout_width="@dimen/size_icon_small"
            android:layout_height="@dimen/size_icon_small"
            tools:src="@drawable/ic_outline_check_circle_24"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="@dimen/spacing_body"
            app:layout_constraintTop_toTopOf="parent"
            android:contentDescription="@string/ivStateIcon" />

        <ImageView
            android:id="@+id/ivTaskSourceIcon"
            android:layout_width="@dimen/size_icon_small"
            android:layout_height="@dimen/size_icon_small"
            android:src="@drawable/ic_outline_notifications_24"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="@dimen/spacing_body"
            app:layout_constraintTop_toBottomOf="@id/tvTaskName"
            android:contentDescription="@string/ivTaskSource" />

        <TextView
            android:id="@+id/tvTaskSource"
            style="@style/Widget.PushAlerts.Body2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_body"
            android:layout_marginStart="@dimen/spacing_body"
            app:layout_constraintStart_toEndOf="@id/ivTaskSourceIcon"
            app:layout_constraintTop_toBottomOf="@id/tvTaskName"
            tools:text="This is the source" />

        <ImageView
            android:id="@+id/ivDescriptionIcon"
            android:layout_width="@dimen/size_icon_small"
            android:layout_height="@dimen/size_icon_small"
            android:src="@drawable/ic_outline_description_24"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="@dimen/spacing_body"
            app:layout_constraintTop_toBottomOf="@id/ivTaskSourceIcon"
            android:contentDescription="@string/ivDescriptionIcon" />


        <TextView
            android:id="@+id/tvTaskDescription"
            style="@style/Widget.PushAlerts.Body2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_body"
            android:layout_marginStart="@dimen/spacing_body"
            app:layout_constraintStart_toEndOf="@id/ivDescriptionIcon"
            app:layout_constraintTop_toBottomOf="@id/tvTaskSource"
            tools:text="This is a description" />

        <TextView
            android:id="@+id/tvTaskCreatedAt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="@style/Widget.PushAlerts.Caption"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            tools:text="01.04.21 - 20:34" />

        <TextView
            android:id="@+id/tvAssigned"
            style="@style/Widget.PushAlerts.Body2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_heading"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/ivDescriptionIcon"
            tools:text="user@mail.com" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</com.google.android.material.card.MaterialCardView>
